--- a/src/cabide-solidario/Views/RoupasDoadas/Create.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
 <h1>Cadastre um novo item</h1>
@@ -43,8 +44,8 @@
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <a asp-action="Index" class="btn btn-info">Voltar</a>
-                <input type="submit" value="Cadastrar" class="btn btn-success" />
+                <a asp-action="Index" class="btn btn-info mt-2">Voltar</a>
+                <input type="submit" value="Cadastrar" class="btn btn-success mt-2" />
             </div>
         </form>
     </div>
