Ajustes iniciais da página Home

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -2,7 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome New!</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="Secao1">
+    
+    
+
+</section>
+
+<section>
+    Seção 2
+</section>
+
+<section>
+    Seção 3
+</section>
+
+<section>
+    Seção 4
+</section>
+
+<section>
+    Seção 5
+</section>
+
+<section>
+    Seção 6
+</section>
+
+<section>
+    Seção 7
+</section>
+
+
