Construção Home. Seções 1 e 3

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -2,33 +2,64 @@
     ViewData["Title"] = "Home Page";
 }
 
-<section class="Secao1">
+<section class="secao1">
     
-    
+    <div class="container-secao1">
+        <div class="secao1-left">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum ex sit amet ex ullamcorper tincidunt. Nunc gravida porta tincidunt. Nullam eu arcu id erat venenatis scelerisque eget ut nisl. Donec ac quam sit amet leo pharetra euismod in at lacus. Fusce vel tortor finibus augue rutrum dapibus. Nam vitae rutrum elit. Aliquam ac dictum dolor. Morbi hendrerit leo id condimentum rutrum. Mauris fringilla posuere elementum. </p>
+            <br />
+        </div>
+        <div class="secao1-right">
+            <img src="/css/doacao-roupas-home.jpg"/>
+        </div>
+    </div>
 
 </section>
-
+    
 <section>
     Seção 2
 </section>
 
-<section>
-    Seção 3
+<section class="secao3">
+    <div class="secao3-title">Equipe</div>
+    <div class="secao3-container">
+        <div class="secao3-box">
+            <div class="secao3-box-area">
+                <img class="secao3-avatar" src="/css/Voluntário-1.jpg" alt="Alternate Text" />
+                <div>Nome</div>
+                <div>Função</div>
+                <div>Descrição</div>
+            </div>
+            <div class="secao3-box-area">
+                <img class="secao3-avatar" src="/css/Voluntario-2.jpg" alt="Alternate Text" />
+                <div>Nome</div>
+                <div>Função</div>
+                <div>Descrição</div>
+            </div>
+            <div class="secao3-box-area">
+                <img class="secao3-avatar" src="/css/Voluntario-3.jpg" alt="Alternate Text" />
+                <div>Nome</div>
+                <div>Função</div>
+                <div>Descrição</div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
-<section>
+<section class="secao4">
     Seção 4
 </section>
 
-<section>
+<section class="secao5">
     Seção 5
 </section>
 
-<section>
+<section class="secao6">
     Seção 6
 </section>
 
-<section>
+<section class="secao7">
     Seção 7
 </section>
 
