--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     
     <div class="container-secao1">
         <div class="secao1-left">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum ex sit amet ex ullamcorper tincidunt. Nunc gravida porta tincidunt. Nullam eu arcu id erat venenatis scelerisque eget ut nisl. Donec ac quam sit amet leo pharetra euismod in at lacus. Fusce vel tortor finibus augue rutrum dapibus. Nam vitae rutrum elit. Aliquam ac dictum dolor. Morbi hendrerit leo id condimentum rutrum. Mauris fringilla posuere elementum. </p>
+            <p>O Cabide Solidário é uma organização dedicada a distribuir roupas para pessoas em situação de vulnerabilidade. Além de oferecer vestuário, proporcionamos apoio emocional e encaminhamento para outros serviços sociais. Acreditamos na dignidade de cada indivíduo e buscamos promover o calor humano e a solidariedade em nossa comunidade. Com o apoio de voluntários e parceiros, estamos transformando vidas e construindo um mundo mais justo e acolhedor. Junte-se a nós e faça parte dessa corrente de amor e esperança.</p>
             <br />
         </div>
         <div class="secao1-right">
@@ -25,22 +25,22 @@
     <div class="secao3-container">
         <div class="secao3-box">
             <div class="secao3-box-area">
-                <img class="secao3-avatar" src="/css/Voluntário-1.jpg" alt="Alternate Text" />
-                <div>Nome</div>
-                <div>Função</div>
-                <div>Descrição</div>
+                <img class="secao3-avatar" src="/css/voluntario-2.jpg" alt="Foto de um voluntário(a)" />
+                <div>Joana Silva</div>
+                <div>Coordenadora de Logística</div>
+                <div class="secao3-descricao">Joana é responsável por coordenar a logística de recebimento, triagem e distribuição das doações de roupas na ONG. Ela trabalha em estreita colaboração com equipes de voluntários para garantir que as doações sejam recebidas de forma eficiente e distribuídas para aqueles que mais precisam.</div>
             </div>
             <div class="secao3-box-area">
-                <img class="secao3-avatar" src="/css/Voluntario-2.jpg" alt="Alternate Text" />
-                <div>Nome</div>
-                <div>Função</div>
-                <div>Descrição</div>
+                <img class="secao3-avatar" src="/css/voluntário-1.jpg" alt="Foto de um voluntário(a)" />
+                <div>Maria Santos</div>
+                <div>Coordenadora de Assistência Social</div>
+                <div class="secao3-descricao">Maria é responsável por coordenar os programas de assistência social da ONG, garantindo que as pessoas em situação de vulnerabilidade tenham acesso às roupas doadas de acordo com suas necessidades. Ela trabalha para identificar e atender às necessidades específicas da comunidade atendida pela ONG.</div>
             </div>
             <div class="secao3-box-area">
-                <img class="secao3-avatar" src="/css/Voluntario-3.jpg" alt="Alternate Text" />
-                <div>Nome</div>
-                <div>Função</div>
-                <div>Descrição</div>
+                <img class="secao3-avatar" src="/css/voluntario-3.jpg" alt="Foto de um voluntário(a)" />
+                <div>Carlos Mendes</div>
+                <div>Gerente de Comunicação e Engajamento</div>
+                <div class="secao3-descricao">Carlos lidera os esforços de comunicação da ONG, garantindo que a mensagem da organização seja clara e impactante. Ele desenvolve campanhas de conscientização, engaja a comunidade local e promove eventos para incentivar a doação de roupas e o apoio às causas sociais da ONG.</div>
             </div>
         </div>
     </div>
