Criação de mais seções da Home

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 
 </section>
     
-<section>
+<section class="secao2">
     Seção 2
 </section>
 
@@ -26,20 +26,20 @@
         <div class="secao3-box">
             <div class="secao3-box-area">
                 <img class="secao3-avatar" src="/css/voluntario-2.jpg" alt="Foto de um voluntário(a)" />
-                <div>Joana Silva</div>
-                <div>Coordenadora de Logística</div>
+                <div class="secao3-nome">Joana Silva</div>
+                <div class="secao3-funcao">Coordenadora de Logística</div><br />
                 <div class="secao3-descricao">Joana é responsável por coordenar a logística de recebimento, triagem e distribuição das doações de roupas na ONG. Ela trabalha em estreita colaboração com equipes de voluntários para garantir que as doações sejam recebidas de forma eficiente e distribuídas para aqueles que mais precisam.</div>
             </div>
             <div class="secao3-box-area">
                 <img class="secao3-avatar" src="/css/voluntário-1.jpg" alt="Foto de um voluntário(a)" />
-                <div>Maria Santos</div>
-                <div>Coordenadora de Assistência Social</div>
+                <div class="secao3-nome">Maria Santos</div>
+                <div class="secao3-funcao">Coordenadora de Assistência Social</div><br />
                 <div class="secao3-descricao">Maria é responsável por coordenar os programas de assistência social da ONG, garantindo que as pessoas em situação de vulnerabilidade tenham acesso às roupas doadas de acordo com suas necessidades. Ela trabalha para identificar e atender às necessidades específicas da comunidade atendida pela ONG.</div>
             </div>
             <div class="secao3-box-area">
                 <img class="secao3-avatar" src="/css/voluntario-3.jpg" alt="Foto de um voluntário(a)" />
-                <div>Carlos Mendes</div>
-                <div>Gerente de Comunicação e Engajamento</div>
+                <div class="secao3-nome">Carlos Mendes</div>
+                <div class="secao3-funcao">Gerente de Comunicação e Engajamento</div><br />
                 <div class="secao3-descricao">Carlos lidera os esforços de comunicação da ONG, garantindo que a mensagem da organização seja clara e impactante. Ele desenvolve campanhas de conscientização, engaja a comunidade local e promove eventos para incentivar a doação de roupas e o apoio às causas sociais da ONG.</div>
             </div>
         </div>
@@ -48,19 +48,78 @@
 </section>
 
 <section class="secao4">
-    Seção 4
+    <div class="secao4-left">
+        <div class="secao4-left-title">
+            <h4>SEJA UM(A) APOIADOR(A)</h4>
+        </div>
+        <div class="secao4-left-text">
+            <p>Apoiando financeiramente ou com roupas, você está contribuindo diretamente para a realização de projetos e programas que têm o potencial de fazer uma diferença significativa na vida das pessoas e no meio ambiente. As organizações não governamentais desempenham um papel crucial em áreas como educação, saúde, proteção ambiental e direitos humanos, muitas vezes preenchendo lacunas deixadas pelo setor público. Seu apoio financeiro pode ajudar a sustentar essas iniciativas vitais, possibilitando o alcance de metas e impactando positivamente comunidades inteiras.</p>
+        </div>
+    </div>
+    <div class="secao4-right">
+        <div class="secao4-right-superior">
+            <p>Se quer ser um(a) apoiador(a) do Cabide Solidário, clique no botão abaixo e envie seus dados:</p>
+            <a class="btn btn-dark btn-lg" href="#">Quero apoiar</a>
+            
+        </div>
+        <div class="secao4-right-inferior">
+            <p>Você também pode apoiar enviando qualquer valor para o Cabide Solidário:<br /><br />
+            BANCO: Nome do banco<br />
+            AGÊNCIA: 0000-0<br />
+            CONTA CORRENTE: 00000-0<br />
+            CNPJ: 00.000.000/0000-00<br />
+            NOME: Cabide Solidário</p>
+        </div>
+    </div>
 </section>
 
 <section class="secao5">
-    Seção 5
+    <div class="secao5-left">
+        <div class="secao5-left-title">
+            <h4>SEJA UM(A) VOLUNTÁRIO(A)</h4>
+        </div>
+        <div class="secao5-left-text">
+            <p>Ser voluntário em uma ONG é uma maneira poderosa de dedicar seu tempo e habilidades para causas que você valoriza. Ao doar seu tempo, você está oferecendo suporte prático e humano para projetos que têm um impacto real nas vidas das pessoas e no ambiente ao seu redor. Além disso, o trabalho voluntário proporciona uma oportunidade única de se envolver diretamente com as comunidades e entender melhor as questões que enfrentam. Além de contribuir para o bem-estar dos outros, ser voluntário também pode trazer um profundo senso de realização pessoal e uma conexão mais significativa com o mundo ao seu redor.</p>
+        </div>
+    </div>
+    <div class="secao5-right">
+            <p>Se quer ser um(a) voluntário(a) do Cabide Solidário, clique no botão abaixo e envie seus dados:</p>
+            <a class="btn btn-dark btn-lg" href="#">Quero particpar</a>
+    </div>
 </section>
 
 <section class="secao6">
-    Seção 6
+    <div class ="secao6-left">
+        <div class ="secao6-left-title">
+            <h4>EMPRESAS PARCEIRAS</h4>
+        </div>
+        <div class="secao6-left-images">
+            <img src="/css/logoemp1.jpg" alt="Empresa parceira 1" />
+            <img src="/css/logoemp2.jpg" alt="Empresa parceira 2" />
+            <img src="/css/logoemp3.jpg" alt="Empresa parceira 3" />
+        </div>
+    </div>
+    <div class="secao6-right">
+        <div class="secao6-right-title">
+            <h4>PROJETOS QUE APOIAMOS</h4>
+        </div>
+        <div class="secao6-right-images">
+            <img src="/css/logoproj1.jpg" alt="Projeto 1" />
+            <img src="/css/logoproj2.jpg" alt="Projeto 2" />
+            <img src="/css/logoproj3.jpg" alt="Projeto 3" />
+        </div>
+    </div>
 </section>
 
 <section class="secao7">
-    Seção 7
+    <div class="secao7-container">
+        <div class="secao7-texto">
+            <h5>Entre em contato conosco</h5>
+            <p>
+                Telefone: (99) 9 9999-9999 <br />
+                E-mail: cabidesolidario.ong@email.com <br />
+                Endereço: Rua Solidária 01 Centro Cidade do Amor UF CEP: 00000-000
+            </p>
+        </div>
+    </div>
 </section>
-
-
