Termino da seção 2 e início do login (com erro após a migration)

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     
     <div class="container-secao1">
         <div class="secao1-left">
+            <h4>NOSSO PROJETO</h4>
             <p>O Cabide Solidário é uma organização dedicada a distribuir roupas para pessoas em situação de vulnerabilidade. Além de oferecer vestuário, proporcionamos apoio emocional e encaminhamento para outros serviços sociais. Acreditamos na dignidade de cada indivíduo e buscamos promover o calor humano e a solidariedade em nossa comunidade. Com o apoio de voluntários e parceiros, estamos transformando vidas e construindo um mundo mais justo e acolhedor. Junte-se a nós e faça parte dessa corrente de amor e esperança.</p>
             <br />
         </div>
@@ -17,11 +18,30 @@
 </section>
     
 <section class="secao2">
-    Seção 2
+    <br />
+    <div class="secao2-title">Roupas</div><br />
+    <div class="secao2-container">
+        <div class="secao2-modelos">
+            <div class="secao2-modelo1">
+                <img src="/css/Adulto.jpg" alt="Roupas para adultos" />
+                <p>Adulto</p>
+            </div>
+            <div class="secao2-modelo2">
+                <img src="/css/Infantil.jpg" alt="Roupas para crianças" />
+                <p>Infantil</p>
+            </div>
+            <div class="secao2-modelo3">
+                <img src="/css/Sapatos.jpg" alt="Calçados" />
+                <p>Calçados</p>
+            </div>
+        </div>
+    </div>
+    <a class="btn btn btn-outline-secondary" href="#">Veja todas as peças disponíveis</a>
 </section>
 
 <section class="secao3">
-    <div class="secao3-title">Equipe</div>
+    <br />
+    <div class="secao3-title"> Nossa Equipe</div>
     <div class="secao3-container">
         <div class="secao3-box">
             <div class="secao3-box-area">
@@ -90,6 +110,7 @@
 
 <section class="secao6">
     <div class ="secao6-left">
+        <br />
         <div class ="secao6-left-title">
             <h4>EMPRESAS PARCEIRAS</h4>
         </div>
@@ -100,6 +121,7 @@
         </div>
     </div>
     <div class="secao6-right">
+        <br />
         <div class="secao6-right-title">
             <h4>PROJETOS QUE APOIAMOS</h4>
         </div>
