Ajustes banco de dados

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                 <p>Adulto</p>
             </div>
             <div class="secao2-modelo2">
-                <img src="/css/Infantil.jpg" alt="Roupas para crianças" />
+                <img src="/css/Infantil3.jpg" alt="Roupas para crianças" />
                 <p>Infantil</p>
             </div>
             <div class="secao2-modelo3">
