Criação da View da tabela Candidatos

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
     </div>
     <div class="secao5-right">
             <p>Se quer ser um(a) voluntário(a) do Cabide Solidário, clique no botão abaixo e envie seus dados:</p>
-            <a class="btn btn-dark btn-lg" href="#">Quero particpar</a>
+        <a class="btn btn-dark btn-lg" asp-area="" asp-controller="Candidatos" asp-action="Create">Quero particpar</a>
     </div>
 </section>
 
