--- a/src/cabide-solidario/Views/Shared/_Layout.cshtml
+++ b/src/cabide-solidario/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="RoupasDoadas" asp-action="Index">Dashboard</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Candidatos" asp-action="Index">Candidatos</a>
+                        </li>
                     </ul>
                   
                 </div>
