--- a/src/cabide-solidario/Views/Candidatos/Details.cshtml
+++ b/src/cabide-solidario/Views/Candidatos/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes da candidatura</h1>
 
 <div>
-    <h4>Candidato</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
