Adição de links e ajustes de layout

--- a/src/cabide-solidario/Views/Candidatos/Create.cshtml
+++ b/src/cabide-solidario/Views/Candidatos/Create.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="Texto_Motivacao" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <a asp-action="Index" class="btn btn-info">Voltar</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-info">Voltar</a>
                 <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </form>
