--- a/src/cabide-solidario/Views/Candidatos/Index.cshtml
+++ b/src/cabide-solidario/Views/Candidatos/Index.cshtml
@@ -2,13 +2,11 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
 <h1>Lista de candidatos ao voluntariado</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-success">Adicionar novo candidato</a>
-</p>
 <table class="table">
     <thead>
         <tr>
