--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
     <div class="secao4-right">
         <div class="secao4-right-superior">
             <p>Se quer ser um(a) apoiador(a) do Cabide Solidário, clique no botão abaixo e envie seus dados:</p>
-            <a class="btn btn-dark btn-lg" href="#">Quero apoiar</a>
+            <a class="btn btn-dark btn-lg" asp-area="" asp-controller="Parceiros" asp-action="Create">Quero particpar</a>
             
         </div>
         <div class="secao4-right-inferior">
