--- a/src/cabide-solidario/Views/Parceiros/Delete.cshtml
+++ b/src/cabide-solidario/Views/Parceiros/Delete.cshtml
@@ -34,7 +34,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-info">Voltar</a>
+        <input type="submit" value="Remover" class="btn btn-danger" />
+
     </form>
 </div>
