--- a/src/cabide-solidario/Views/Parceiros/Details.cshtml
+++ b/src/cabide-solidario/Views/Parceiros/Details.cshtml
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-info">Voltar</a>
+    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model?.Id">Editar</a>
 </div>
