--- a/src/cabide-solidario/Views/Parceiros/Edit.cshtml
+++ b/src/cabide-solidario/Views/Parceiros/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Parceiro</h4>
 <hr />
@@ -30,14 +30,11 @@
                 <span asp-validation-for="Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-info mt-2">Voltar</a>
+                <input type="submit" value="Salvar" class="btn btn-success mt-2" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
