--- a/src/cabide-solidario/Views/Shared/_Layout.cshtml
+++ b/src/cabide-solidario/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         
                         
                     </ul>
-                    <ul class="navbar-nav">
+                    @* <ul class="navbar-nav">
 
                         @if (User.Identity.IsAuthenticated)
                         {
@@ -55,7 +55,7 @@
                             </li>
                         }
 
-                    </ul>
+                    </ul> *@
                 </div>
             </div>
         </nav>
