--- a/src/cabide-solidario/Views/RoupasDoadas/Create.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Create.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Tamanho" class="control-label"></label>
-                <select asp-for="Tamanho" class="form-control" asp-items="Html.GetEnumSelectList<Tamanho>()"></select>
+                <select asp-for="Tamanho" class="form-control" asp-items="Html.GetEnumSelectList<tipoTamanho>()"></select>
                 <span asp-validation-for="Tamanho" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genero" class="control-label"></label>
-                <select asp-for="Genero" class="form-control" asp-items="Html.GetEnumSelectList<Genero>()"></select>
+                <select asp-for="Genero" class="form-control" asp-items="Html.GetEnumSelectList<tipoGenero>()"></select>
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div>
             <div class="form-group">
