--- a/src/cabide-solidario/Views/Parceiros/Create.cshtml
+++ b/src/cabide-solidario/Views/Parceiros/Create.cshtml
@@ -13,12 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="NomeEmpresa" class="control-label"></label>
+                <label asp-for="NomeEmpresa" class="control-label">Nome da Empresa</label>
                 <input asp-for="NomeEmpresa" class="form-control" />
                 <span asp-validation-for="NomeEmpresa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label">E-mail</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
