--- a/src/cabide-solidario/Views/Shared/_Layout.cshtml
+++ b/src/cabide-solidario/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/cabide_solidario.styles.css" asp-append-version="true" />
+    <link rel="shortcut icon" href="/css/favicon-96x96.png" type="image/x-icon"/>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <div class="navbar-area-logo">
-                    <img class="navbar-logo" src="/css/logo.png" alt="Alternate Text" />
+                    <img class="navbar-logo" src="/css/logo.png" alt="Logo do site" />
                 </div>
                 <!-- <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cabide Solidario</a> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -25,25 +26,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (User.IsInRole("Admin"))
+                        {
 
-                        
-                        
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="RoupasDoadas" asp-action="Index">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="RoupasDoadas" asp-action="Catalogo">Catalogo</a>
-                             </li>
+                                <a class="nav-link text-light" asp-area="" asp-controller="RoupasDoadas" asp-action="Catalogo">Catalogo</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Candidatos" asp-action="Index">Candidatos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuários</a>
                             </li>
-                        
-                        
+                        }
+
                     </ul>
-                    @* <ul class="navbar-nav">
+                    <ul class="navbar-nav">
 
                         @if (User.Identity.IsAuthenticated)
                         {
@@ -54,11 +55,11 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Usuarios" asp-action="Login">Login</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Usuarios" asp-action="Login">LOGIN</a>
                             </li>
                         }
 
-                    </ul> *@
+                    </ul>
                 </div>
             </div>
         </nav>
