Correção de imagens e adição de códido do produto

--- a/src/cabide-solidario/Views/Home/Index.cshtml
+++ b/src/cabide-solidario/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <a class="btn btn btn-outline-secondary" href="#">Veja todas as peças disponíveis</a>
+    <a asp-area="" asp-controller="RoupasDoadas" asp-action="Catalogo" class="btn btn btn-outline-secondary">Veja todas as peças disponíveis</a>
 </section>
 
 <section class="secao3">
