--- a/src/cabide-solidario/Views/RoupasDoadas/Create.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Create.cshtml
@@ -39,6 +39,12 @@
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CodigoProduto" class="control-label"></label>
+                <input asp-for="CodigoProduto" class="form-control" />
+                <span asp-validation-for="CodigoProduto" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Imagem" class="control-label"></label>
                 <input asp-for="ImageUpload" class="form-control" />
                 <img id="imgpreview" class="pt-2" />
