--- a/src/cabide-solidario/Views/RoupasDoadas/Index.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Index.cshtml
@@ -50,6 +50,9 @@
                 @Html.DisplayFor(modelItem => item.Genero)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.CodigoProduto)
+            </td>
+            <td>
                     <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
                     <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Visualizar</a>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
