--- a/src/cabide-solidario/Views/RoupasDoadas/Catalogo.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Catalogo.cshtml
@@ -14,9 +14,10 @@
             <div class="card-body align-content-end">
                 <h5 class="card-title">@item.NomeItem</h5>
                 <p class="card-text">
-                    @Html.Raw(item.Genero)
+                    @Html.Raw(item.Genero)<br />
+                    <span class="fw-bold">Código do Produto: </span>@Html.Raw(item.CodigoProduto)
                 </p>
-                <a href="#" class="btn btn-primary">Adicionar ao Carrinho</a>
+
             </div>
         </div>
     }
