--- a/src/cabide-solidario/Views/RoupasDoadas/Details.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Details.cshtml
@@ -41,6 +41,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genero)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CodigoProduto)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CodigoProduto)
+        </dd>
     </dl>
 </div>
 <div>
