--- a/src/cabide-solidario/Views/RoupasDoadas/Edit.cshtml
+++ b/src/cabide-solidario/Views/RoupasDoadas/Edit.cshtml
@@ -40,6 +40,11 @@
                 <span asp-validation-for="Genero" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CodigoProduto" class="control-label"></label>
+                <input asp-for="CodigoProduto" class="form-control" />
+                <span asp-validation-for="CodigoProduto" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <a asp-action="Index" class="btn btn-info mt-2">Voltar</a>
                 <input type="submit" value="Salvar" class="btn btn-success mt-2" />
             </div>
